# understanding-llms

./: PLAN.md  README.md  pyproject.toml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/demos/: neural-network.md
src/: __init__.py  network.py  visualize.py
src/gradient_descent/: __init__.py
src/llm_workings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_network.py
